done refactor recovery session